# FaceGallery

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/: stale.yml
include/: vec2.hpp
libs/oaid/: CMakeLists.txt
libs/oaid/include/: comm_lib.hpp  mtcnn.hpp  tensorflow_mtcnn.hpp  utils.hpp
libs/oaid/src/: comm_lib.cpp  mtcnn.cpp  tensorflow_mtcnn.cpp  utils.cpp
libs/qt/: CMakeLists.txt
libs/tensorflow/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
